jEdit 5.1 version history
       (changes since jEdit 5.0pre1)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Jarek Czekalski, Thomas Meyer, Matthieu Casanova, Alan Ezust,
Malathi, Vladimir Avdonin, Eric Le Lay, Darien Brown, Steve snarum-micron,
and Maik Nijhuis for contributing to this release.

{{{ Bug fixes

- File status checking before save (#3562315, Alan Ezust)

- Fixed the StandaloneTextArea that cannot load keymaps
  (#3562023 Matthieu Casanova)

- The .jedit/modes/catalog is now written using UTF-8 instead of default
  OS encoding (#3560800 Matthieu Casanova)

- Undo restores selection state in simple cases (deletions, replaces
  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
  Jarek Czekalski)

- Fix a case where a NPE occurs when removing a plugin
  (#3557441 Matthieu Casanova) [5.0pre2]

- Filter not synchronizing in search dialog when
  "All buffers" is selected. (#1646584, patch #3549905 Eric Le Lay)

- Recognizing "Extra word characters" in "Whole word" option in
  searches (#3522497, patch #3543524 Malathi) [5.0pre2]

- Fix pressing return in parent files of the VFS browser that do not browse 
  the selected folder as it should (patch #3543499 by Eric Le Lay) [5.0pre2]

- Fixed VFS session not ended in VFS.copy() api (#3522406 Matthieu Casanova)

- Use of a scrollable list for delete dialog confirmation
  (#2911520 Matthieu Casanova)

- The macro Display_Abbreviations is broken (#3539691 Matthieu Casanova)
  [5.0pre2]

}}}
{{{ API Changes

- New method VFSBrowser.getLastVisitedPath() (Jarek Czekalski)

- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)

- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)

- New method MiscUtilities.openInDesktop() [5.0pre2] (Alan Ezust)

- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)

- New method: View.getBuffers(), aware of bufferset scope. (Alan Ezust)

}}}
{{{ Editing
